<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">摇晃工具箱</string>
    <string name="menu_preferences">首选项</string>
    <string name="menu_about">关于</string>
    <string name="menu_share">分享</string>
    <string name="menu_exit">退出</string>
    <string name="dialog_about_title_fmt">关于 %s</string>
    <string name="notification_ticker_text">Shake Toolbox服务已启动</string>
    <string name="notification_content_text">Shake Toolbox服务已启动！</string>
    <string name="toast_pic_saved_fmt">屏幕截图已保存到%s</string>
    <string name="toast_start_service_failed">无法启动服务，可能缺少加速传感器。</string>
    <string name="toast_cant_write_sdcard">无法保存图片，请插入SD卡。</string>
    <string name="toast_root_required">需要ROOT权限</string>
    <string name="about_author">作者：</string>
    <string name="about_version">版本：</string>
    <string name="about_website">网站：</string>
    <string name="about_issue">问题反馈：</string>
    <string name="about_description">打开需要的操作，然后退出程序，服务会在后台运行，摇晃你的手机触发操作。当前版本最好不要同时打开多个操作。另外，如果您使用自动杀进程工具，请将本程序加入排除列表。</string>
    <string name="start_app_cancel">取消</string>
    <string name="start_app_ok">选择</string>
    <string name="content_des"></string>

</resources>