<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ListView
        android:id="@+id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:contentDescription="@string/content_des"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_app_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_weight="2"
            android:text="@string/start_app_cancel" />
        <Button
            android:id="@+id/start_app_save"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:layout_weight="2"
            android:text="@string/start_app_ok" />
    </LinearLayout>
</LinearLayout>