<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:padding="5dp">
	<LinearLayout
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_width="fill_parent">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:layout_marginRight="5dp"
			android:text="@string/about_version" />
		<TextView
			android:id="@+id/TextViewVersion"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>
	<LinearLayout
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_width="fill_parent">
		<TextView
			android:text="@string/about_author"
			android:textStyle="bold"
			android:layout_marginRight="5dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="郑智仁   王景学" />
	</LinearLayout>
	<LinearLayout
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_width="fill_parent">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:text="Email:"
			android:layout_marginRight="5dp" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="ZhengZhiren@gmail.com tilltheendwjx@gmail.com"
			android:autoLink="email" />
	</LinearLayout>
	<LinearLayout
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_width="fill_parent">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textStyle="bold"
			android:layout_marginRight="5dp"
			android:text="@string/about_website" />
		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="http://code.google.com/p/shake-toolbox/"
			android:autoLink="web"></TextView>
	</LinearLayout>
	<LinearLayout
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="6dp"
		android:padding="6dp">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="16sp"
			android:text="@string/about_description"></TextView>
	</LinearLayout>
</LinearLayout>